--- a/src/App.css
+++ b/src/App.css
@@ -179,3 +179,8 @@ body::-webkit-scrollbar-thumb {
   top: 0px;
   left: 0px;
 }
+
+label.col-form-label input.form-check-input {
+  margin-top: .4em;
+  margin-right: .2em;
+}
